--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.14.2",
+    "react-scripts": "^2.1.3",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
